<resources>
    <string name="app_name">Chopify App</string>
    <string name="title_home">Inicio</string>
    <string name="title_products">Productos</string>
    <string name="title_business">Negocio</string>

    <string name="splashDescription">Descripción de la pantalla de inicio\n</string>
    <string name="chopify">Chopify</string>
    <string name="userName">Usuario</string>
    <string name="password">Contraseña\n</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="don_t_have_a_account">¿No tienes una cuenta?</string>
    <string name="sign_up">Regístrate</string>
    <string name="content_description_end_icon_check">Icono de verificación\n</string>
    <string name="sign_in">INICIAR SESIÓN\n</string>
    <string name="invalid_email">Correo electrónico inválido</string>

    <string name="title_account_registration">Crear cuenta</string>
    <string name="label_email">Correo electrónico</string>
    <string name="label_password">Contraseña</string>
    <string name="label_confirm_password">Confirmar contraseña</string>

    <string name="title_business_registration">Datos del negocio</string>
    <string name="label_name">Nombre</string>
    <string name="label_cuit">Cuit</string>
    <string name="label_phone">Teléfono</string>

    <string name="title_address_registration">Dirección del negocio</string>
    <string name="label_address">Dirección</string>
    <string name="map_description">Mapa para guardar las coordenadas del usuario</string>

    <string name="btn_continue">Continuar</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="title_Order">Pedido</string>
    <string name="title_orders_history">Historial de pedidos</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="cancelar">CANCELAR</string>

    <string name="add_discount">Agregar Descuento</string>
    <string name="promotion_name">Nombre de la Promoción</string>
    <string name="discount">Descuento</string>
    <string name="start_date">Fecha de Inicio</string>
    <string name="end_date">Fecha de Fin</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>

    <string name="business_profile_image">negocio descripcion\n</string>
    <string name="business_name">Chopify\n</string>
    <string name="cuit">2034563089</string>
    <string name="phone">154560340</string>
    <string name="email">chopify@business.com</string>
    <string name="location">av.Roca 678</string>
    <string name="my_location">My location</string>
    <string name="pedidos">Pedidos</string>
    <string name="data_product">Datos del Producto\n</string>
    <string name="name">Nombre\n</string>
    <string name="description">Descripcion</string>
    <string name="price">Precio\n</string>
    <string name="stock">Stock</string>
    <string name="category">Categoria</string>
    <string name="ver_todos_pedidos">ver todos los pedidos</string>
    <string name="search">Buscar</string>
    <string name="title_orders">Pedidos</string>
    <string name="agrega_descuento">Agrega descuento</string>
</resources>
