<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/negro_carbon"
    tools:context=".ui.login.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/layoutLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="@string/chopify"
                android:textSize="70sp"
                android:textStyle="normal"
                android:fontFamily="@font/nunito_bold"
                android:textColor="@color/verde_lima"
                android:letterSpacing="0.1"
                android:padding="8dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColorHint="@color/negro_carbon"
                android:hint="@string/userName"
                app:boxCornerRadiusBottomEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusTopStart="16dp"
                app:boxStrokeWidth="0dp"
                app:endIconMode="custom"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/negro_carbon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/blanco_humo"
                    android:textColor="@color/negro_carbon"
                    android:textColorHint="@color/negro_carbon"
                    android:textCursorDrawable="@drawable/cursor_drawable"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/password"
                android:textColorHint="@color/negro_carbon"
                app:boxCornerRadiusTopStart="16dp"
                app:boxCornerRadiusTopEnd="16dp"
                app:boxCornerRadiusBottomStart="16dp"
                app:boxCornerRadiusBottomEnd="16dp"
                app:endIconMode="password_toggle"
                app:endIconTint="@color/negro_carbon"
                app:boxStrokeWidth="0dp"
                app:boxStrokeWidthFocused="0dp"
                app:hintTextColor="@color/negro_carbon">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/blanco_humo"
                    android:textColorHint="@color/negro_carbon"
                    android:textCursorDrawable="@drawable/cursor_drawable"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/forgotPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="20dp"
                android:text="@string/forgot_password"
                android:textColor="@color/blanco_humo"
                android:textSize="16sp"
                android:padding="15dp"
                android:clickable="true"
                android:focusable="true" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/singIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/verde_lima"
                android:textColor="@color/negro_carbon"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textStyle="bold"
                app:cornerRadius="16dp"
                android:padding="12dp"
                android:gravity="center" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="30dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="20dp"
                    android:paddingTop="15dp"
                    android:text="@string/don_t_have_a_account"
                    android:textColor="@color/gray"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/singUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="20dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="15dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/verde_lima"
                    android:textSize="16sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</FrameLayout>



